--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
 
       <!-- Testimonials -->
       <h3 class="w3-padding-24 w3-text-light-grey">My Reputation</h3>
-      <img src="/w3images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+      <img src="./bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
       <p><span class="w3-large w3-margin-right">Chris Fox.</span> CEO at Mighty Resturant.</p>
       <p>Curtis Mowry saved us from a web disaster.</p><br>
 
-      <img src="/w3images/avatar_g2.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+      <img src="./avatar_g2.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
       <p><span class="w3-large w3-margin-right">Rebecca Flex.</span> CEO at Cafe.</p>
       <p>No one is better than Curtis Mowry.</p>
       <!-- End About Section -->
@@ -190,16 +190,16 @@
       <!-- Grid for photos -->
       <div class="w3-row-padding" style="margin:0 -16px">
         <div class="w3-half">
-          <img src="/w3images/wedding.jpg" style="width:100%">
-          <img src="/w3images/rocks.jpg" style="width:100%">
-          <img src="/w3images/sailboat.jpg" style="width:100%">
+          <img src="./person1.jpg" style="width:100%">
+          <img src="./person3.jpg" style="width:100%">
+          <img src="./person4.jpg" style="width:100%">
         </div>
 
         <div class="w3-half">
-          <img src="/w3images/underwater.jpg" style="width:100%">
-          <img src="/w3images/chef.jpg" style="width:100%">
-          <img src="/w3images/wedding.jpg" style="width:100%">
-          <img src="/w3images/p6.jpg" style="width:100%">
+          <img src="./Curtis Mowry.jpg" style="width:100%">
+          <img src="./person1.jpg" style="width:100%">
+          <img src="./person3.jpg" style="width:100%">
+          <img src="./person4.jpg" style="width:100%">
         </div>
         <!-- End photo grid -->
       </div>
